# gmc

./: .gitignore  LICENSE  build-cx.py  build_backend.py  pyproject.toml  readme.rst  run_gmc.py  setup.py
.github/workflows/: ci.yml
doc/source/: conf.py  getting_started.rst  index.rst  tagged_objects.rst
doc/source/_static/: custom.css
gmc/: __main__.py  about.py  application.py  graphics.py  help_label.py  main_window.py  mdi_area.py
gmc/file_widgets/: multiple_sources_one_destination.py  one_source_one_destination.py
gmc/i18n/: gmc_ru.ts  schemas_tr.py  update.sh  update_ts.sh
gmc/markup_objects/: __init__.py  graph.py  line.py  moveable_diamond.py  point.py  polygon.py  quadrangle.py  rect.py  tags.py
gmc/resources/: build_rc.bat  gmc_ru.qm  mainwindow.qrc
gmc/schemas/: __init__.py  fields.py  horizontal_tracking.py
gmc/schemas/tagged_objects/: __init__.py  markup_interpolation.py
gmc/settings/: __init__.py  dialog.py
gmc/utils/: __init__.py  clipboard.py  dicts.py  image.py  json.py  properties_schema.py  read_properties.py  svg.py
gmc/views/: filesystem_view.py  filesystem_widget.py  image_view.py  image_widget.py  properties_view.py
gmc/views/video_widget/: __init__.py  frame_tooltip.py  player.py  seek_slider.py
gmc/views/video_widget/gmcffmpeg/: __init__.py  avcodec.h  avformat.h  avformat_t.h  avutil.h  avutil_t.h  error.py
testdata/tagged_objects/: .gmc_properties.json
tests/: __init__.py  test_filesystem_view.py  test_tag_editing.py  test_tagged_objects.py
