[project]
name = "run-gmc"
dynamic = ["version"]
authors = [
  { name="Arseniy Terekhin", email="senyai@gmail.com" },
]
description = "General Markup Creator"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "readme.rst"
dependencies = [
  "opencv-python",
  "PyQt5",
  "Pillow",
]
[build-system]
requires = [
  "setuptools",
  "wheel",
]
backend-path = [""]
build-backend = "build_backend"
[tool.setuptools.packages.find]
where = ["."]
include = ["gmc*"]
[tool.setuptools.package-data]
gmc = ["resources/*.qm", "resources/*.svg", "resources/cursors/*.svg"]
[tool.setuptools.exclude-package-data]
gmc = ["*.bat", "*.ts", "*.sh", "*.qrc"]
[tool.black]
line-length = 79
[project.scripts]
run-gmc = "gmc.application:main"
[tool.setuptools.dynamic]
version = {attr = "gmc.__version__"}
